# structured-information-extraction-with-llms

./: .gitignore  Install Guide GOR 2025 Workshop.qmd  LICENSE.md  README.md  gor25_workshop.ipynb  gor25_workshop.qmd  install_guide.qmd  monitoring.d2  pyproject.toml
assets/: information_extraction.d2  production.d2
