[project]
name = "gor25-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor[fireworks-ai]>=1.7.2",
    "ipykernel>=6.29.5",
    "llama-cpp-python>=0.3.5",
    "openai>=1.58.1",
    "polars>=1.18.0",
    "pydantic>=2.10.4",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]
